# os2mo-amqp-trigger-elevate-manager

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  RELEASE.md.template  docker-compose.yml  mypy.ini  notes.txt  pyproject.toml  queries.graphql
.reuse/: dep5
dev-environment/: elevator.env
elevate-manager/: pyproject.toml
elevate-manager/elevate_manager/: main.py
elevate_manager/: __init__.py  config.py  depends.py  events.py  log.py  main.py  mo.py  models.py  ou_levels.py
elevate_manager/autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_manager_engagement.py  input_types.py  manager_engagements.py  move_engagement.py  org_unit_managers.py  scalars.py  terminate_manager.py
elevate_manager/models/: get_existing_managers.py  get_manager_engagements.py  get_manager_engagements_uuids.py  get_org_unit_levels.py
tests/: test_events.py  test_exceptions.py  test_main.py  test_mo.py  test_mo_graphql_queries.py  test_ou_levels.py
tests/manual/: manual_test_cli.py  test_ou_levels.py
