# SPDX-FileCopyrightText: 2022 Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0

[tool.poetry]
name = "elevate-manager"
version = "0.0.0"  # versioning handled by conventional commits
description = "OS2mo AMQP trigger receiver that elevates manager engagement according to manager level changes"
authors = ["Magenta ApS <info@magenta.dk>"]
readme = "README.md"
packages = [{include = "elevate_manager"}]
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-triggers/os2mo-amqp-trigger-elevate-manager"
keywords = ["os2mo", "amqp"]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.3.0"
pydantic = "^1.10.4"
raclients = "^3.0.3"
more-itertools = "^9.0.0"
uvicorn = "^0.20.0"
fastramqpi = "^1.3.12"
pre-commit = "^3.0.0"
pytest-cov = "^4.0.0"
gql = "^3.4.0"
click = "^8.1.3"
pytest-asyncio = "^0.21.0"
pytest-split = "^0.8.1"


[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
