[tool.poetry]
name = "elevate-manager"
version = "1.0.0"
description = "OS2mo AMQP trigger receiver that elevates manager engagement according to manager level changes"
authors = ["Andreas Kring <andreas@magenta.dk>"]
readme = "README.md"
packages = [{include = "elevate_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.3.0"
pydantic = "^1.10.4"
raclients = "^3.0.3"
more-itertools = "^9.0.0"
uvicorn = "^0.20.0"
ramqp = "^6.7.2"
fastapi = ">=0.88.0,<0.89.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
